# EpiphanyMachineVST

./: .gitignore  CMakeLists.txt  README.md  epiphany-machine-VST-v2-manual-full.md
docs/superpowers/specs/: 2026-03-27-epiphany-machine-v3-design.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/DSP/: DiffusionNetwork.cpp  DiffusionNetwork.h  DualFilter.cpp  DualFilter.h  GlitchEngine.cpp  GlitchEngine.h  PitchDrifter.cpp  PitchDrifter.h  StereoWidener.cpp  StereoWidener.h  TextureBodyDetector.cpp  TextureBodyDetector.h
src/GUI/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  MorphKnob.cpp  MorphKnob.h  PresetBar.cpp  PresetBar.h
src/Presets/: PresetData.h  PresetManager.cpp  PresetManager.h
